Index format and Week 1

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="./index.html">Home</a></h4>
@@ -24,29 +24,23 @@
 
 
 
-<h3>About Me</h3>
+<h3>ABOUT ME</h3>
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
-  <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+  <p id="aboutme" align="right">
+    Name...........................................................>> <b>Eli Kirtley</b><br>
+    Year.......................................................................>> <b>Senior</b><br>
+    House.................................................................>> <b>Quincy</b><br>
+    Concentration.................>> <b>Applied Mathematics</b><br>
+    Hometown.....................................>> <b>Centreville, VA</b>
+    
   </p>
+  <img src="./about-me-selfie.png" alt="tom ford model", width = 300>
 </div>
 <br></br>
 
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
-<br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
 
-<br></br>
-Maybe even add a video?
-<br></br>
-
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
 
 
 </div>
