--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -5,11 +5,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
-
 <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
   <div style="align-items: center; justify-content: center;" class="container-fluid">
     <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+      <h2 class="nav-title">PS70 Spring 2025</h2>
     </div>
     <div class="navbar-nav">
       <h4><a class="nav-link" href="../index.html">Home</a></h4>
@@ -23,39 +22,40 @@
 <div class="textcontainer">
 <br></br>
 
-<h3>Week 1: Final Project Proposal</h3>
+<h3 align="center"><b>I >> Intro</b></h3>
+<p class="margin"></p>
+Here are a couple cool ideas for my final project...
+<p class="margin"></p>
 
-<p class = "margin"></p>
-Here are at most 3 ideas for my final project
-<p class = "margin"></p>
+<div class="row">
+  <div class="col-sm-4">
+    <h4>Idea 1: Walking Table</h4>
+    <p>What has 4 legs and can't walk? A table! But what if we could change that? Introducing the Walking Table, a functional piece of furniture that moves at your command. Need to grab your coffee mug that's all the way across the room, but don't have the energy to get up and retrieve it? No problem! Just grab the walking table remote and guide your new favorite table over to your side.</p>
+    <p>One problem here is that this has already been done (see picture). Which is fine, but I want to make some modifications, listed here:</p>
+    <ul>
+      <li>Make it smaller, with fewer parts (fewer legs)</li>
+      <li>Add a height-adjustment capability</li>
+      <li>Make the tabletop a cool lacquer-wood inlaid kind of design</li>
+    </ul>
+    <img src="../walking_table.jpg" alt="Walking Table" style="width:100%; max-width:300px; display:block; margin:auto;">
+  </div>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
-<p class = "margin"></p>
+  <div class="col-sm-4">
+    <h4>Idea 2: Cash Cow</h4>
+    <p>Have you ever wanted your own personal ATM? Look no further! For those of you out there who love organizing your personal belongings, but find that your wallet or purse can't hold the fat stacks of cash you bring back home every day, the Cash Cow is perfect for you. With this device, you can withdraw or deposit the desired amount of cash you want, whenever you want, and it will constantly keep track of how much money you have in the bank.</p>
+  </div>
 
-Idea 1 description
-
-<p class = "margin"></p>
-
-
-<h4>Idea 2: [INSERT IDEA 2]</h4>
-<p class = "margin"></p>
-
-Idea 2 Description
-
-<p class = "margin"></p>
-
-<h4>Idea 3: [INSERT IDEA 3]</h4>
-<p class = "margin"></p>
-
-Idea 3 Description
-
-
+  <div class="col-sm-4">
+    <h4>Idea 3: Self-Watering Planter</h4>
+    <p>Watering plants can be hard to keep track of. Unfortunately, you can't use a sprinkler indoors, unless you want to get all your stuff wet! The self-watering planter solves this problem by constantly monitoring moisture levels in the soil, and whenever it gets too dry, activates a water pump to give the dry plant a nice shower!</p>
+  </div>
+</div>
 
 </div>
 </xmp>
 </body>
 
 <script src="../strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
