--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -6,13 +6,10 @@
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
-    </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="../index.html">Home</a></h4>
+<nav class="navbar navbar-expand-sm navbar-dark">
+  <div class="container-fluid d-flex justify-content-center">
+    <h4><a class="nav-link" href="../index.html">PS 70</a></h4>
+    <div class="ms-auto position-absolute" style="right: 30px;">
       <h4><a class="nav-link" href="../about.html">About</a></h4>
     </div>
   </div>
