--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>PS70</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #dcdcdc; color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Spring 2025</h2>
-    </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
+<nav class="navbar navbar-expand-sm navbar-dark">
+  <div class="container-fluid d-flex justify-content-center">
+    <h4><a class="nav-link" href="./index.html">PS 70</a></h4>
+    <div class="ms-auto position-absolute" style="right: 30px;">
       <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
     </div>
   </div>
 </nav>
@@ -33,10 +29,14 @@
   <a href="./08_cnc/index.html" style="--index: 8"><b>VIII</b> >> CNC</a>
   <a href="./09_networking/index.html" style="--index: 9"><b>IX</b> >> Networking</a>
   <a href="./10_machine/index.html" style="--index: 10"><b>X</b> >> Machine Building</a>
+  <a href="./13_finalproject/index.html" style="--index: 11"><b>FINAL PROJECT</b></a>
 </div>
 
-
 </xmp>
+
+<footer class="footer">
+</footer>
+
 </body>
 
 <script src="./strapdown.js"></script>
