--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 <xmp style="display:none;">
 
 <div class="container-fluid bg-3 text-center link-container">
-  <a href="./01_intro/index.html" style="--index: 1"><b>I</b> >> Intro</a>
-  <a href="./02_2Ddesign/index.html" style="--index: 2"><b>II</b> >> 2D Design</a>
-  <a href="./03_fabrication/index.html" style="--index: 3"><b>III</b> >> Fabrication</a>
-  <a href="./04_microcontroller/index.html" style="--index: 4"><b>IV</b> >> Programming</a>
-  <a href="./05_3Ddesign/index.html" style="--index: 5"><b>V</b> >> 3D Design</a>
-  <a href="./06_inputs/index.html" style="--index: 6"><b>VI</b> >> Inputs</a>
-  <a href="./07_outputs/index.html" style="--index: 7"><b>VII</b> >> Outputs</a>
-  <a href="./08_cnc/index.html" style="--index: 8"><b>VIII</b> >> CNC</a>
-  <a href="./09_networking/index.html" style="--index: 9"><b>IX</b> >> Networking</a>
-  <a href="./10_machine/index.html" style="--index: 10"><b>X</b> >> Machine Building</a>
-  <a href="./13_finalproject/index.html" style="--index: 11"><b>FINAL PROJECT</b></a>
+  <div class="hover_img"><a href="./01_intro/index.html" style="--index: 1"><b>I</b> >> Intro<span><img src="./fettywap.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img"><a href="./02_2Ddesign/index.html" style="--index: 2"><b>II</b> >> 2D Design<span><img src="./strokes_angles.jpeg" alt="image" height="400" /></span></a></div>
+  <div class="hover_img"><a href="./03_fabrication/index.html" style="--index: 3"><b>III</b> >> Fabrication<span><img src="./currents.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img"><a href="./04_microcontroller/index.html" style="--index: 4"><b>IV</b> >> Programming<span><img src="./ok_computer.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img"><a href="./05_3Ddesign/index.html" style="--index: 5"><b>V</b> >> 3D Design<span><img src="./filler.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./06_inputs/index.html" style="--index: 6"><b>VI</b> >> Inputs<span><img src="./arctic_monkeys_am.jpeg" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./07_outputs/index.html" style="--index: 7"><b>VII</b> >> Outputs<span><img src="./pink_floyd.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./08_cnc/index.html" style="--index: 8"><b>VIII</b> >> CNC<span><img src="./filler.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./09_networking/index.html" style="--index: 9"><b>IX</b> >> Networking<span><img src="./filler.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./10_machine/index.html" style="--index: 10"><b>X</b> >> Machine Building<span><img src="./filler.png" alt="image" height="400" /></span></a></div>
+  <div class="hover_img_raised"><a href="./13_finalproject/index.html" style="--index: 11"><b>FINAL PROJECT</b><span><img src="./filler.png" alt="image" height="400" /></span></a></div>
 </div>
 
 </xmp>
